fixed email and updated links

--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
                 <div class="half-width">
                     <h2>Like what you see?</h2>
                     <h3 id="email-header">Let's meet for a cup of tea.</h3>
-                    <a href="mailto:hi@jubileeausten.com"><img src="img/envelope.png" id="envelope"
-                            alt="envelope icon" />troy[@]rt3designs.com</a>
+                    <a href="mailto:troy@rt3designs.com"><img src="img/envelope.png" id="envelope"
+                            alt="envelope icon" />troy@rt3designs.com</a>
                     <h3 id="socialmedia-header">Or, find me on the interwebs</h3>
                     <ul>
-                        <li><a href=""><img src="img/twitter.png" alt="twitter icon" /></a></li>
-                        <li><a href=""><img src="img/tumblr.png" alt="tumblr icon" /></a></li>
-                        <li><a href=""><img src="img/instagram.png" alt="instagram icon" /></a></li>
-                        <li><a href=""><img src="img/linkedin.png" alt="linkedin icon" /></a></li>
-                        <li><a href=""><img src="img/github.png" alt="github icon" /></a></li>
+                        <li><a href=""><img src="" alt="twitter icon" /></a></li>
+                        <li><a href=""><img src="" alt="tumblr icon" /></a></li>
+                        <li><a href="https://www.instagram.com/rt3_designs/"><img src="img/instagram.png" alt="instagram icon" /></a></li>
+                        <li><a href=""><img src="" alt="linkedin icon" /></a></li>
+                        <li><a href="https://github.com/TroyR3"><img src="img/github.png" alt="github icon" /></a></li>
                     </ul>
                 </div>
             </div>
