fixed visible alt tags on links

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
                             alt="envelope icon" />troy@rt3designs.com</a>
                     <h3 id="socialmedia-header">Or, find me on the interwebs</h3>
                     <ul>
-                        <li><a href=""><img src="" alt="twitter icon" /></a></li>
-                        <li><a href=""><img src="" alt="tumblr icon" /></a></li>
+                        <li><a href=""><img src="" alt="" /></a></li>
+                        <li><a href=""><img src="" alt="" /></a></li>
                         <li><a href="https://www.instagram.com/rt3_designs/"><img src="img/instagram.png" alt="instagram icon" /></a></li>
-                        <li><a href=""><img src="" alt="linkedin icon" /></a></li>
+                        <li><a href=""><img src="" alt="" /></a></li>
                         <li><a href="https://github.com/TroyR3"><img src="img/github.png" alt="github icon" /></a></li>
                     </ul>
                 </div>
